--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate": "openapi --input ../api/src/main/resources/static/openapi.yaml --output ./src/api"
+    "generate": "npx openapi-typescript ./../api/src/main/resources/static/openapi.yaml -o ./src/api/api.ts"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
@@ -16,6 +16,8 @@
     "@tanstack/react-query-devtools": "^5.54.1",
     "lucide-react": "^0.437.0",
     "net": "^1.0.2",
+    "openapi-fetch": "^0.12.2",
+    "openapi-react-query": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
@@ -35,12 +37,12 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "openapi-typescript-codegen": "^0.29.0",
+    "openapi-typescript": "^7.4.1",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.3",
+    "typescript": "^5.6.2",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   }
