split GET /movies into multiple smaller endpoints: /movies, /movies/search, /movies/filter

--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -4,6 +4,7 @@ logging:
       springframework:
         security: DEBUG
         messaging: DEBUG
+        web: TRACE
 # used for CORS and JWT claims retrieval
 client:
   url: http://localhost:5173
