--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ logging:
       springframework:
         security: DEBUG
         messaging: DEBUG
-        web: TRACE
+        web: DEBUG
 # used for CORS and JWT claims retrieval
 client:
   url: http://localhost:5173
