--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -4,7 +4,9 @@ logging:
       springframework:
         security: DEBUG
         messaging: DEBUG
-        web: DEBUG
+        data:
+          jpa: DEBUG
+#        web: DEBUG
 # used for CORS and JWT claims retrieval
 client:
   url: http://localhost:5173
