--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "react-select": "^5.8.1",
     "react-stomp": "^5.1.0",
     "react-toastify": "^10.0.5",
     "sockjs": "^0.3.24",
