add language dropdowns

--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "@auth0/auth0-react": "^2.2.4",
     "@tanstack/react-query": "^5.54.1",
     "@tanstack/react-query-devtools": "^5.54.1",
+    "i18next": "^23.15.2",
     "lucide-react": "^0.437.0",
     "net": "^1.0.2",
     "openapi-fetch": "^0.12.2",
     "openapi-react-query": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.2",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.1",
     "react-stomp": "^5.1.0",
@@ -36,6 +38,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
+    "eslint-plugin-i18next": "^6.1.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
