add Dockerfile for client + add Spring Boot Actuator + add client do docker-compose

--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,8 +1,9 @@
 FROM maven:3.9.9-eclipse-temurin-23-alpine AS build
 WORKDIR /app
-COPY pom.xml .
+COPY /api/pom.xml .
 RUN mvn dependency:go-offline
-COPY src ./src
+COPY /api/src ./src
+COPY openapi.yaml ./src/main/resources/static
 RUN mvn clean package -DskipTests
 
 FROM eclipse-temurin:23-jre AS production
